[package]
name = "typedmap"
version = "0.1.1"
authors = ["Konrad Gołuchowski <kodieg@gmail.com>"]
edition = "2018"
description = "A hash map (dash map). A type of value is defined by trait implemented on key type"
license = "MIT OR Apache-2.0"
keywords = ["hashmap", "typed", "dashmap", "anymap", "typemap"]
categories = ["data-structures", "concurrency"]
repository = "https://github.com/kodieg/typedmap/"
readme = "README.md"

[dependencies]
dashmap = { version = "4.0", optional = true }

[package.metadata.docs.rs]
all-features = true
