[package]
name = "typedmap"
version = "0.6.0"
authors = ["Konrad Gołuchowski <kodieg@gmail.com>"]
edition = "2021"
description = "A hash map (dash map). A type of value is defined by trait implemented on key type"
license = "MIT OR Apache-2.0"
keywords = ["hashmap", "typed", "dashmap", "anymap", "typemap"]
categories = ["data-structures", "concurrency"]
repository = "https://github.com/kodieg/typedmap/"
readme = "README.md"

[features]
clone = ["dyn-clone"]

[dependencies]
dashmap = { version = "6.1.0", optional = true }
dyn-clone = { version = "1.0.17", optional = true }

[package.metadata.docs.rs]
all-features = true
